# My_projects

./: .gitignore  Makefile  README.md  README.rst  db.sqlite3  pyproject.toml
ipm_school/: db.sqlite3  manage.py
ipm_school/ipm_school/: asgi.py  settings.py  urls.py  wsgi.py
ipm_school/project/: urls.py
ipm_school/project/apps/main/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
ipm_school/project/settings/: __init__.py  base.py
ipm_school/project/static/CSS/: ind.css  index.css
ipm_school/project/static/authorization/CSS/: index.css
ipm_school/project/static/student/: student.css
ipm_school/project/templates/: index.html  index_footer.html  index_header.html  page_student.html
ipm_school/project/templates/authorization/: authorization.html  registration_student.html  registration_teacher.html  reset_password_complete.html  reset_password_email.html  update_authorization.html  update_code.html
ipm_school/project/templates/student/: footer.html  footer_profile.html  header_profile.html  page_student_class.html  page_student_lk.html  page_student_lk_edit.html  page_student_lk_no_class.html
ipm_school/project/templates/teacher/: page_teach_settings.html  page_teach_settings_OLD.html  page_teacher_lk.html  page_teacher_lk_OLD.html
local/: development.py
tasks_from_course/: readme
tasks_from_university/: new_laba1.ipynb  new_laba2.ipynb  readme
